--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "PX4-Autopilot"]
 	path = PX4-Autopilot
 	url = https://github.com/PX4/PX4-Autopilot.git
+[submodule "external_modules/src/modules/backprop_tools_benchmark/CMSIS_5"]
+	path = external_modules/src/modules/backprop_tools_benchmark/CMSIS_5
+	url = https://github.com/ARM-software/CMSIS_5.git
+[submodule "external_modules/src/modules/backprop_tools_benchmark/CMSIS-DSP"]
+	path = external_modules/src/modules/backprop_tools_benchmark/CMSIS-DSP
+	url = https://github.com/ARM-software/CMSIS-DSP.git
