--- a/external_modules/src/modules/rl_tools_benchmark/Kconfig
+++ b/external_modules/src/modules/rl_tools_benchmark/Kconfig
@@ -1,5 +1,5 @@
 menuconfig MODULES_BACKPROP_TOOLS_BENCHMARK
-	bool "backprop_tools_benchmark"
+	bool "rl_tools_benchmark"
 	default n
 	---help---
 		Enable support for RLtools Benchmark
