pub sub muxing of actuator outputs works (requires second publisher)

--- a/external_modules/src/CMakeLists.txt
+++ b/external_modules/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 message("CMAKE external")
 set(config_module_list_external
     modules/rl_tools_benchmark
+    modules/actuator_motors_multiplexer
     PARENT_SCOPE
 )
