--- a/external_modules/src/CMakeLists.txt
+++ b/external_modules/src/CMakeLists.txt
@@ -1,7 +1,7 @@
-message("CMAKE external")
 set(config_module_list_external
     modules/rl_tools_benchmark
     modules/rl_tools_policy
+    modules/rl_tools_commander
     modules/actuator_motors_multiplexer
     PARENT_SCOPE
 )
