Adding multiplexer and policy status messages

--- a/external_modules/msg/CMakeLists.txt
+++ b/external_modules/msg/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(config_msg_list_external
     RlToolsCommand.msg
     RlToolsPolicyStatus.msg
+    RlToolsMultiplexerStatus.msg
     PARENT_SCOPE
 )
