--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,10 +19,10 @@
             "request": "launch",
             "program": "forward_ros_to_mavlink.py",
             "console": "integratedTerminal",
-            "justMyCode": true,
+            "justMyCode": false,
             "cwd": "${workspaceFolder}/tools/external_position_reference",
             "env":{
-                "MAVLINK_POSE_TOPIC": "/vicon/race6/pose",
+                "MAVLINK_POSE_TOPIC": "/vicon/race2/pose",
                 "MAVLINK_URL": "tcp:localhost:5760"
             }
         }
