--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "PX4-Autopilot"]
 	path = PX4-Autopilot
-	url = https://github.com/PX4/PX4-Autopilot.git
+	url = https://github.com/rl-tools/px4-autopilot.git
 [submodule "external_modules/src/modules/rl_tools_benchmark/CMSIS_5"]
 	path = external_modules/src/modules/rl_tools_benchmark/CMSIS_5
 	url = https://github.com/ARM-software/CMSIS_5.git
