rnn policy works great in x500 sitl

--- a/external_modules/src/modules/rl_tools_policy/CMakeLists.txt
+++ b/external_modules/src/modules/rl_tools_policy/CMakeLists.txt
@@ -12,6 +12,7 @@ px4_add_module(
 		-DARM_MATH_LOOPUNROLL
 	SRCS
 		RLtoolsPolicy.cpp
+		rl_tools_adapter.cpp
 	# DEPENDS
 	# 	px4_work_queue
 	EXTERNAL
