offboard mode works well

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,6 +51,18 @@
                 "MAVLINK_POSE_TOPIC": "/vicon/soft/pose",
                 "MAVLINK_URL": "udp:localhost:14551"
             }
+        },
+        {
+            "name": "tools/external_position_reference/forward_ros_to_mavlink [sitl]",
+            "type": "python",
+            "request": "launch",
+            "program": "forward_ros_to_mavlink.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "cwd": "${workspaceFolder}/tools/external_position_reference",
+            "env":{
+                "MAVLINK_URL": "udp:localhost:14551"
+            }
         }
     ]
 }
